--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,10 @@ transformers
 torch
 scikit-learn
 tqdm
+nlpaug
+pytorch-lightning
+onnx
+onnxruntime
+datasets
+accelerate>=0.26.0
+transformers[torch]
